Ensure panel electorates are not bold or italic (despite being wrapped in those tags)

--- a/src/components/Block/styles.scss
+++ b/src/components/Block/styles.scss
@@ -171,6 +171,8 @@
   padding: 0 0.2em;
   display: inline-block;
   background-color: $color_White;
+  font-style: normal;
+  font-weight: normal;
   line-height: 1.25;
   white-space: nowrap;
 }
